[package]
name = "dominant-color"
version = "1.0.0"
description = "Fast & minimal python module to compute the dominant color of an image, written in Rust."
readme = "README.md"
authors = ["baptiste0928 <contact@baptiste0928.net>"]
repository = "https://github.com/baptiste0928/dominant-color"
license = "MIT"
edition = "2018"

[package.metadata.maturin]
classifier = ["License :: OSI Approved :: MIT License", "Programming Language :: Rust", "Topic :: Multimedia :: Graphics"]

[lib]
name = "dominant_color"
crate-type = ["cdylib"]

[dependencies]
image = "0.23.11"
colorsys = "0.6.0"

[dependencies.pyo3]
version = "0.12.3"
features = ["extension-module"]
